# QNWIS

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  100_PERCENT_COMPLETE.md  ACTUAL_FIX_NEEDED.md  ACTUAL_PROBLEM_DIAGNOSIS.md  ADAPTIVE_DEBATE_SYSTEM.md  AGENTREPORT_BUG_FIXED.md  AGENTS_QUICK_START.md  AGENTS_V1_HARDENING_COMPLETE.md  AGENTS_V1_IMPLEMENTATION_COMPLETE.md  AGENT_ARCHITECTURE_FIX_COMPLETE.md  AGENT_FIX_SUMMARY.md  ALL_12_APIS_FULLY_INTEGRATED.md  ALL_3_CRITICAL_FIXES_COMPLETE.md  ALL_3_FIXES_COMPLETE.md  ALL_4_FIXES_COMPLETE_FINAL.md  ALL_ERRORS_FIXED_ENTERPRISE_GRADE.md  ALL_FEATURES_COMPLETE_FINAL.md  ALL_FIXED_FINAL_INSTRUCTIONS.md  ALL_PHASES_COMPLETE_FINAL.md  ALL_PHASES_COMPLETE_FINAL_STATUS.md  API_INTEGRATION_COMPLETE.md  ARCHITECTURAL_MISMATCH_FOUND.md  ARCHITECTURE_INVESTIGATION_REPORT.md  ARTICLE_QNWIS_SYSTEM.md  ARTICLE_UPDATES.md  BACKEND_FAILURE_ROOT_CAUSE.md  BACKEND_RESTART_COMPLETE.md  BACKEND_SSE_STATUS.md  BACKEND_STABILIZATION_COMPLETE.md  BACKEND_WORKING_CONFIRMED.md  C1_API_LLM_MIGRATION_COMPLETE.md  C3_QUERY_REGISTRY_COMPLETE.md  C4_DATABASE_INITIALIZATION_COMPLETE.md  C5_ERROR_HANDLING_COMPLETE.md  CACHE_AND_FRESHNESS_IMPLEMENTATION.md  CACHE_FIRST_IMPLEMENTATION_SUCCESS.md  CAPABILITIES_MANIFESTO.md  (+557 more)
.claude/: settings.local.json
.mcp/: servers.json
config/: gpu_config.yaml  nsic_gpu_config.yaml  production.yaml
configs/: gunicorn.conf.py
data/: azure_model_test_results.json  knowledge_graph.json  knowledge_graph.pkl  lmis_dashboard_data.json  rag_store.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DOMAIN_AGNOSTIC.md  CHANGELOG.md  DATA_DICTIONARY.md  DETERMINISTIC_DATA_LAYER_SPECIFICATION.md  DEVELOPER_ONBOARDING.md  ENGINE_B_UPGRADE_SPECIFICATION.md  FRONTEND_REDESIGN_SPECIFICATION.md  GPU_ANALYSIS_REPORT.md  IMPLEMENTATION_QUICK_REFERENCE.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  LEGENDARY_LAUNCH_GUIDE.md  LMIS_INTELLIGENCE_SYSTEM_PROPOSAL_V2.md  NSIC_SYSTEM_ARTICLE.md  OPERATIONS_RUNBOOK.md  PERFORMANCE.md  PROPOSAL_CHANGES_SUMMARY.md  QUICK_START_GUIDE (1).md  README (1).md  RELEASE_NOTES.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md  agents_v1.md  cache_and_freshness.md  dashboards_v1.md  data_api_v2.md  ddl_v2_endpoints.md  deterministic_layer.md  orchestration_v1.md  synthetic_data_pack.md  transforms_catalog.md  ui_dashboard_bundle.md  ui_demos.md  verification_v2_and_briefing.md
examples/: alert_rules_sample.yaml  api_client_llm.py  retention_boost_scenario.yml
monitoring/: README.md  analyze_queries.py  dashboard.py  monitor_api.py  monitor_gpus.py
outputs/: e2e_evaluation_20251130_183308.txt  e2e_evaluation_economic_diversification_20251130_204307.json  e2e_evaluation_economic_diversification_20251130_205155.json
pilot_evidence/: PILOT_SUMMARY.json  query_01_Economic Diversification.json  query_02_Energy_Oil&Gas.json  query_03_Tourism.json  query_04_Food Security.json  query_05_Healthcare.json  query_06_Digital_AI.json  query_07_Manufacturing.json  query_08_Workforce_Labor.json  query_09_Infrastructure.json  query_10_Cross-Domain Strategic.json
qnwis-frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
qnwis-ui/: README.md  package-lock.json  package.json
qnwis-ui-backup-20251118-154504/: index.html  package.json
references/: README.md  orchestration_reference.py  prompts_reference.py  rag_system_reference.py
scripts/: Publish-Changes.ps1  README.md  analyze_lmis_endpoints.py  audit_data_flow.py  audit_engine_b.py  benchmark_qnwis.py  build_exllamav2.bat  build_exllamav2_source.bat  build_knowledge_graph.py  check_azure_keys.py  check_cuda.py  check_data_availability.py  check_database.py  check_db_data.py  check_gpu_status.py  check_kg_pickle.py  check_knowledge_graph.py  check_nsic_health.py  check_package_info.py  check_raw_state.py  check_services.py  compare_prompts.py  compare_prompts_detailed.py  compile_exllama.bat  compile_exllama_verbose.bat  create_embeddings_table_basic.py  debug_agent_row.py  debug_gpt51_empty.py  debug_gpt51_nosystem.py  deepseek_service.py  demo_all_data_sources.py  demo_end_to_end.py  demo_live.py  deploy_all_components.py  deploy_deepseek_correct.py  deploy_deepseek_native.py  diagnose_pytorch.py  doc_checks.py  entrypoint.sh  etl_fao_to_postgres.py  (+104 more)
slo/: default.yaml
sql/: 001_init_audit.sql  002_add_pgvector.sql  003_prompt_versions.sql
src/: orchestration_reference.py  prompts_reference.py
test_reports/: api_accuracy_report_20251125_162831.json  api_accuracy_report_20251125_163010.json  api_accuracy_report_20251125_163035.json  api_accuracy_report_20251125_163257.json  api_accuracy_report_20251125_163417.json  api_accuracy_report_20251125_163708.json  api_accuracy_report_20251125_163803.json  api_accuracy_report_20251125_163928.json  api_accuracy_report_20251125_165324.json  comprehensive_test_output.txt  comprehensive_test_report_20251125_163006.html  comprehensive_test_report_20251125_163006.json  comprehensive_test_report_20251125_163116.html  comprehensive_test_report_20251125_163116.json  e2e_comprehensive_results.json  extraction_accuracy_report_20251125_163417.json  extraction_accuracy_report_20251125_163708.json  extraction_accuracy_report_20251125_163803.json  extraction_accuracy_report_20251125_163928.json  extraction_accuracy_report_20251125_165324.json  kg_rag_accuracy_report_20251125_162935.json  kg_rag_accuracy_report_20251125_163044.json  kg_rag_accuracy_report_20251125_163417.json  kg_rag_accuracy_report_20251125_163606.json  kg_rag_accuracy_report_20251125_163708.json  kg_rag_accuracy_report_20251125_163803.json  kg_rag_accuracy_report_20251125_163928.json  kg_rag_accuracy_report_20251125_165324.json  postgres_accuracy_report_20251125_162835.json  postgres_accuracy_report_20251125_163009.json  postgres_accuracy_report_20251125_163013.json  postgres_accuracy_report_20251125_163015.json  postgres_accuracy_report_20251125_163257.json  postgres_accuracy_report_20251125_163417.json  postgres_accuracy_report_20251125_163708.json  (+4 more)
(+1587 files in other folders)
