[project]
name = "qnwis"
version = "0.1.0"
description = "Qatar National Workforce Intelligence System - Multi-Agent Matching Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "flake8>=7.0.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qnwis"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-m 'not mcp' --asyncio-mode=auto --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = "."
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "mcp: optional MCP server tests (skipped by default)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
warn_unused_ignores = true
exclude = "^(external_data|references|src/data/apis)/"

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "pandas.*",
    "chromadb.*",
    "anthropic.*",
    "openai.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tools.mcp.qnwis_mcp"
disallow_untyped_calls = false

# Loosen checks for API clients if needed
[[tool.mypy.overrides]]
module = [
    "src.data.apis.world_bank",
    "src.data.apis.semantic_scholar", 
    "src.data.apis.qatar_opendata",
    "src.data.apis._http",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "references.orchestration_reference",
    "references.rag_system_reference",
    "references.prompts_reference",
]
follow_imports = "skip"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".venv",
  ".git",
  "external_data",
  "node_modules",
  "build",
  "dist",
  "references",  # treat as read-only examples
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S"]
# silence unused args/imports in *reference* files only
"references/*.py" = ["F401", "F841", "ARG", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["qnwis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
