[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qnwis"
version = "1.0.0"
description = "Qatar National Workforce Intelligence System - AI-Powered Workforce Analytics"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{ name = "Ministry of Labour, Qatar" }]

dependencies = [
  # Core Framework
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "gunicorn>=21.2.0",

  # Database
  "psycopg[binary]>=3.1.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",

  # Cache & Queue
  "redis>=5.0.0",

  # HTTP & Compression
  "httpx>=0.26.0",
  "urllib3>=2.5.0",
  "brotli>=1.1.0",
  "brotli-asgi>=1.1.0",

  # Validation & Settings
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",

  # AI & LLM
  "anthropic>=0.71.0",
  "openai>=1.100.0",
  "tiktoken>=0.5.2",

  # Orchestration
  "langgraph>=0.0.20",
  "langchain>=0.1.0",
  "langchain-core>=0.1.0",

  # Data Science
  "numpy>=1.24.0",
  "numpy_financial>=1.0.0",
  "pandas>=2.0.0",
  "scipy>=1.11.0",

  # Visualization
  "matplotlib>=3.8,<3.9",
  "plotly>=5.18.0",

  # Security
  "bleach>=6.1.0",
  "defusedxml>=0.7.1",
  "cryptography>=41.0.0",

  # Utilities
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "httpx-sse>=0.4.0",
  "mypy>=1.8.0",
  "types-redis>=4.6.0",
  "types-requests>=2.31.0",
  "types-PyYAML>=6.0.12",
  "ruff>=0.1.0",
  "flake8>=7.0.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "bandit>=1.7.9",
  "safety>=3.2.7",
  "pip-audit>=2.7.3",
  "build>=1.0.0",
]
production = [
  "prometheus-client>=0.19.0",
  "sentry-sdk>=1.40.0",
]
all = ["qnwis[dev,production]"]

[project.urls]
Homepage = "https://example.invalid/qnwis"
Repository = "https://github.com/ministry-of-labour-qatar/qnwis"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["qnwis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "pandas.*",
    "chromadb.*",
    "anthropic.*",
    "openai.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tools.mcp.qnwis_mcp"
disallow_untyped_calls = false

# Loosen checks for API clients if needed
[[tool.mypy.overrides]]
module = [
    "src.data.apis.world_bank",
    "src.data.apis.semantic_scholar", 
    "src.data.apis.qatar_opendata",
    "src.data.apis._http",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "references.orchestration_reference",
    "references.rag_system_reference",
    "references.prompts_reference",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "qnwis.notify.*",
    "qnwis.incidents.*",
]
disallow_any_generics = true
implicit_reexport = false
warn_unused_ignores = true

[tool.ruff]
line-length = 100
exclude = [
  ".venv",
  ".git",
  "external_data",
  "node_modules",
  "build",
  "dist",
  "references",  # treat as read-only examples
  "grafana/dashboards/**/*.json",
]
extend-include = [
  "src/qnwis/alerts/**/*.py",
  "src/qnwis/monitoring/**/*.py",
  "src/qnwis/agents/alert_center.py",
  "src/qnwis/scripts/qa/ops_gate.py",
  "src/qnwis/scripts/qa/determinism_scan.py",
  "src/qnwis/scripts/qa/rg7_recovery_gate.py",
  "src/qnwis/notify/**/*.py",
  "src/qnwis/incidents/**/*.py",
  "src/qnwis/continuity/**/*.py",
  "src/qnwis/api/routers/**/*.py",
  "src/qnwis/scripts/qa/ops_notify_gate.py",
  "src/qnwis/ops_console/**/*.py",
  "grafana/dashboards/**/*.py",  # dashboards lint coverage (JSON ignored)
  "src/qnwis/slo/**/*.py",
  "src/qnwis/scripts/qa/rg6_resilience_gate.py",
  "src/qnwis/scripts/qa/step31_slo_slice.py",
  "src/qnwis/scripts/qa/step32_dr_slice.py",
  "src/qnwis/scripts/qa/rg8_continuity_gate.py",
  "src/qnwis/dr/**/*.py",
]

[tool.ruff.lint]
select = ["E","F","I","B","C90"]
ignore = ["E203","E266","E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S"]
# silence unused args/imports in *reference* files only
"references/*.py" = ["F401", "F841", "ARG", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["qnwis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
